--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,22 @@ uid                  Giovanni Pellerano <giovanni.pellerano@evilaliv3.org>
 sub   4096g/50A7F150 2009-05-10 [expires: 2014-05-09]
 ----------------------------------------------------------------------------
 
+hellais <art@baculo.org>
+pub   4096R/A22F60B3 2010-07-14 [expires: 2011-07-14]
+      Key fingerprint = CA6D 2EDE D7F6 0928 4326  AF8C 3415 CDAE A22F 60B3
+uid                  Arturo <hellais@gmail.com>
+uid                  Arturo Filastò Buzzolan <art@baculo.org>
+sub   4096R/D91E70E0 2010-07-14 [expires: 2011-07-14]
+----------------------------------------------------------------------------
+
+vecna <vecna@delirandom.net>
+
+pub   1024D/C6765430 2009-08-25 [expires: 2011-08-25]
+      Key fingerprint = 341F 1A8C E2B4 F4F4 174D  7C21 B842 093D C676 5430
+uid                  vecna <vecna@s0ftpj.org>
+uid                  vecna <vecna@delirandom.net>
+sub   3072g/E8157737 2009-08-25 [expires: 2011-08-25]
+----------------------------------------------------------------------------
+
 GITHUB:
-http://github.com/evilaliv3/janus
+http://github.com/evilaliv3/kharon
